@@ -6,6 +6,7 @@ please refer to the ChangeLog file.
 New:
  - New timestamp mode: Delta to previous line.
  - Add HPA ESC sequence
+ - Fix file name of non-global configuration settings.
 
 New for for version 2.7:
  - Configurable status line via -F option, see manpage for a listing
